Replace Swing forms and IntelliJ .form UI files with JavaFX FXML and controllers. Remove legacy Swing UI classes and adapters. Add JavaFX controllers and FXML for main dialogs (project manager, document creator/selector, entity forms, file actions). Preserve existing data-model mapping and document handling logic where possible.